--- a/index.html
+++ b/index.html
@@ -13,8 +13,17 @@
     <button class="btn">클릭</button>
     <div class="msg_box">클릭되었습니다.</div>
 
+    <div class="watch_wrap">
+        <h1>현재시간</h1>
+        <p>
+           <span class="hours">00</span>  : <span class="min">00</span> : <span class="sec">00</span>
+        </p>
+    </div>
+
 
     <script src="js/timeFn.js"></script>
+    <script src="js/ex_1.js"></script>
+    <script src="js/watch.js"></script>
 
 </body>
 </html>
